--- a/content/index.html
+++ b/content/index.html
@@ -13,11 +13,11 @@ description: Damian Zaremba's Blog
         	<span><img src="/assests/images/comments.png" /><a href="{{ post.url }}#disqus_thread">Comments</a></span>
  			{% if post.categories %}
 	        	<ul id="categories">
-	        	{% for cat in post.categories %}<li><a href='{{ cat | make_tag_url }}'>{{ cat }}</a></li>{% endfor %}</ul>
+	        	{% for cat in post.categories %}<li><a href='/category/{{ cat | make_tag_url }}'>{{ cat }}</a></li>{% endfor %}</ul>
 	    	{% else %}
 	    		{% if post.tags %}
 		        	<ul id="categories">
-		        	{% for tag in post.tags %}<li><a href='{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
+		        	{% for tag in post.tags %}<li><a href='/tag/{{ tag | make_tag_url }}'>{{ tag }}</a></li>{% endfor %}</ul>
 	    		{% endif %}
 	        {% endif %}
 	    </div>
