--- a/content/feed/index.html
+++ b/content/feed/index.html
@@ -1,24 +1,21 @@
 ---
 layout: none
 ---
-<?xml version="1.0" encoding="utf-8"?>
-<feed xmlns="http://www.w3.org/2005/Atom">
-    <title type="text" xml:lang="en">Damian Zaremba's Blog</title>
-    <link type="application/atom+xml" href="http://damianzaremba.co.uk/feed/" rel="self"/>
-    <link type="text" href="http://damianzaremba.co.uk" rel="alternate"/>
-    <updated>{{ site.time | date_to_xmlschema }}</updated>
-    <id>http://damianzaremba.co.uk/</id>
-    <author>
-        <name>Damian Zaremba</name>
-    </author>
-    <rights>Copyright 2009-{{ site.time | date: "%Y" }} Damian Zaremba</rights>
-    {% for post in site.posts limit:20 %}
-    <entry>
-        <title>{{ post.title | xml_escape }}</title>
-        <link href="http://damianzaremba.co.uk{{ post.url }}/"/>
-        <updated>{{ post.date | date_to_xmlschema }}</updated>
-        <id>http://damianzaremba.co.uk{{ post.url }}/</id>
-        <summary type="html"><![CDATA[{{ post.content }}]]></summary>
-    </entry>
-    {% endfor %}
-</feed>
+<?xml version="1.0" encoding="UTF-8"?>
+<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
+	<channel>
+		<title>{{ site.name }}</title>
+		<description>{{ site.description }}</description>
+		<link>{{ site.url }}</link>
+		<atom:link href="{{ site.url }}/feed.xml" rel="self" type="application/rss+xml" />
+		{% for post in site.posts limit:10 %}
+			<item>
+				<title>{{ post.title }}</title>
+				<description>{{ post.content | xml_escape }}</description>
+				<pubDate>{{ post.date | date: "%a, %d %b %Y %H:%M:%S %z" }}</pubDate>
+				<link>{{ site.url }}{{ post.url }}</link>
+				<guid isPermaLink="true">{{ site.url }}{{ post.url }}</guid>
+			</item>
+		{% endfor %}
+	</channel>
+</rss>
